[tool.poetry]
name = "riff"
version = "0.1.9.0"
description = "Run ruff, but only fail on modified lines."
authors = ["dorschw <81086590+dorschw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
exclude = ["riff/release", "riff/tests"]

[tool.poetry.urls]
"Homepage" = "https://github.com/dorschw/riff"
"Source" = "https://github.com/dorschw/riff"
"Bug Tracker" = "https://github.com/dorschw/riff/issues"

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.7.0"
unidiff = "^0.7.5"
loguru = "^0.7.0"
gitpython = "^3.1.27"
packaging = "^23.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pre-commit = "^4.0.0"
pytest = "^8.0.0"
ipykernel = "^6.25.1"
toml = "^0.10.2"
types-unidiff = "^0.7.0.20240505"

[tool.poetry.scripts]
riff = "riff.riff:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101",
    "COM812",
    "D",
    "E501",
    "EM102",
    "FBT",
    "INP001",
    "ISC001",
    "S101",
    "TRY003",
    "TD",
    "W293",
]
target-version = "py310"
line-length = 88

[tool.ruff.flake8-tidy-imports.banned-api]
"loguru".msg = "use riff.logger instead"
