[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",
    "D",
    "E501",
    "EM102",
    "FBT",
    "INP001",
    "ISC001",
    "S101",
    "TRY003",
    "TD",
    "W293",
    "EM101",
]
target-version = "py310"
line-length = 88

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"loguru".msg = "use riff.logger instead"

[project]
name = "riff"
version = "0.1.9.0"
description = "Run ruff, but only fail on modified lines."
authors = [{"name"="dorschw", "email"="81086590+dorschw@users.noreply.github.com"},]
license = "MIT"
readme = "README.md"
exclude = ["riff/release", "riff/tests"]
requires-python = ">=3.10"

dependencies = [
    "gitpython == 3.1.43",
    "loguru == 0.7.3",
    "packaging == 23.2",
    "typer == 0.15.1",
    "unidiff == 0.7.5",
    ]
[project.scripts]
riff = "riff.riff:app"

[project.optional-dependencies]
dev = [
    "ruff == 0.8.3",
    "pre-commit == 4.0.1",
    "pytest == 8.3.4",
    "ipykernel == 6.29.5",
    "toml == 0.10.2",
    "types-unidiff == 0.7.0.20240505",
    "types-toml == 0.10.8.20240310",
    "pytest-mock == 3.14.0",
    ]

[project.urls]
"Homepage" = "https://github.com/dorschw/riff"
"Source" = "https://github.com/dorschw/riff"
"Bug Tracker" = "https://github.com/dorschw/riff/issues"
